width open invitation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,8 @@
 
 .open-invitation{
     background-color: #dd3d9a !important;
-    color: white;
+    color: white !important;
+    width: 300px !important;
 }
 .open-invitation:hover{
     background-color: #7494d3 !important;
