--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,9 @@
 }
 
 /* Style */
+.bg-blue-main{
+    background: #0d5a66;
+}
 .opening-bg-img{
     background-position: center;
     background-size: cover;
@@ -18,6 +21,11 @@
 .modal-bg{
     background: rgb(0,0,0);
     background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.16850490196078427) 55%, rgba(0,0,0,0.3225665266106442) 80%, rgba(0,0,0,1) 100%);
+}
+
+.bg-main-hide-container{
+    background: rgb(13,90,102);
+    background: linear-gradient(0deg, rgba(13,90,102,1) 0%, rgba(129,165,215,0.19931722689075626) 43%, rgba(149,178,235,0.11528361344537819) 100%);
 }
 
 .open-invitation{
@@ -37,8 +45,15 @@
     color: white !important;
 }
 
-/* @media and (max-width: 576px){
-    .open-invitation{
-        width: 
+.bg-main-container{
+    height: 500px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+@media only screen and (max-width: 576px){
+    .bg-main-container{
+        height: 600px !important;
     }
-} */
+}
