--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
     font-family: 'Yellowtail', cursive;
 }
 .signature3{
-    font-family: 'Pacifico', cursive;
+    font-family: 'double_diamond', cursive;
 }
 .text-blue-main{
     color: #38466B;
@@ -94,6 +94,10 @@
     -o-border-radius: 22% 22% 0 0;
 }
 
+.waves-motif{
+    bottom: -80px;
+}
+
 @media only screen and (max-width: 768px){
     .text-count{
         font-size: 30px !important;
@@ -113,6 +117,9 @@
     }
     .text-count{
         font-size: 26px !important;
+    }
+    .waves-motif{
+        bottom: -10px !important;
     }
 }
 
