--- a/assets/font/style.css
+++ b/assets/font/style.css
@@ -5,4 +5,12 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'double_diamond';
+    src: url('double_diamond-webfont.woff2') format('woff2'),
+         url('double_diamond-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 
