--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,9 @@ p{
     .waves2-motif{
         top: -10px !important;
     }
+    .element-details{
+        width: 100% !important;
+    }
 }
 
 @media only screen and (max-width: 480px){
