--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,11 +97,15 @@ p{
 }
 
 .section4{
-    border-radius: 12% 12% 0 0;
+    /* border-radius: 12% 12% 0 0;
     -webkit-border-radius: 12% 12% 0 0;
     -moz-border-radius: 12% 12% 0 0;
     -ms-border-radius: 12% 12% 0 0;
-    -o-border-radius: 12% 12% 0 0;
+    -o-border-radius: 12% 12% 0 0; */
+}
+
+.section5{
+    margin-top: 880px;
 }
 
 .waves-motif{
@@ -113,6 +117,14 @@ p{
 
 .text-white-50{
     color: rgb(196, 196, 196);
+}
+
+.img-gallery{
+    width: 100%;
+    height: 100%;
+    max-width: 620px;
+    max-height: 220px;
+    overflow: hidden;
 }
 
 @media only screen and (max-width: 768px){
@@ -143,6 +155,9 @@ p{
     }
     .element-details{
         width: 100% !important;
+    }
+    .section5{
+        margin-top: 920px !important;
     }
 }
 
