--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,13 +96,13 @@ p{
     -o-border-radius: 0 0 22% 22%;
 }
 
-.section4{
-    /* border-radius: 12% 12% 0 0;
+/* .section4{
+    border-radius: 12% 12% 0 0;
     -webkit-border-radius: 12% 12% 0 0;
     -moz-border-radius: 12% 12% 0 0;
     -ms-border-radius: 12% 12% 0 0;
-    -o-border-radius: 12% 12% 0 0; */
-}
+    -o-border-radius: 12% 12% 0 0;
+} */
 
 .section5{
     margin-top: 880px;
