--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,15 +122,27 @@ p{
 .img-gallery{
     width: 100%;
     height: 100%;
-    max-width: 620px;
-    max-height: 220px;
+    max-width: 0px;
+    max-height: 820px;
     overflow: hidden !important;
 }
 .protokol{
-    width: 50%;
+    width: 100%;
 }
 .error{
     color: red !important;
+}
+.rsvp-container{
+    width: 50%;
+    height: 100%;
+    max-height: 600px;
+    overflow: hidden;
+}
+.rsvp-form-container{
+    width: 50%;
+    height: 100%;
+    max-height: 600px;
+    overflow: hidden;
 }
 
 @media only screen and (max-width: 768px){
@@ -140,9 +152,20 @@ p{
     .protokol{
         width: 100% !important;
     }
+    .rsvp-container{
+        max-height: 620px !important;
+        width: 100% !important;
+    }
+    .rsvp-form-container{
+        /* max-height: 620px !important; */
+        width: 100% !important;
+    }
 }
 
 @media only screen and (max-width: 576px){
+    .rsvp-container{
+        max-height: 480px !important;
+    }
     .opening-bg-img{
         background-position: 90% !important;
     }
@@ -176,5 +199,8 @@ p{
 @media only screen and (max-width: 480px){
     .text-count{
         font-size: 20px !important;
+    }
+    .rsvp-container{
+        max-height: 380px !important;
     }
 }
